<?xml version="1.0"?>
<package format="2">
  <name>novatel_gps_msgs</name>
  <version>3.5.0</version>
  <description>
  Messages for proprietary (non-NMEA) sentences from Novatel GPS receivers.
  </description>
  <maintainer email="preed@swri.org">P. J. Reed</maintainer>
  <license>Southwest Research Institute Proprietary</license>
  <url type="repository">https://ivs-git.dyn.datasys.swri.edu/uss/novatel_gps.git</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
